# master

G-Plore/src/Car/: CMakeLists.txt  package.xml
G-Plore/src/Car/doc/: cameraInterface.xlsx
G-Plore/src/Car/include/Camera/: camera.h
G-Plore/src/Car/src/: App.cpp  App.h  HaiLuo_extend_CAN_v1.cpp  HaiLuo_extend_CAN_v1.h  Node.cpp  Node.h  hai_luo_extend_new.cpp  hai_luo_extend_new.h  hai_luo_extev2.cpp  hai_luo_extev2.h  hailuo_extend.cpp  hailuo_extend.h  pved_cls.cpp  pved_cls.h
G-Plore/src/IFSimu/: CMakeLists.txt  package.xml
G-Plore/src/IFSimu/src/: App.cpp  App.h  IFS2000_standard_CAN.cpp  IFS2000_standard_CAN.h  Node.cpp  Node.h
G-Plore/src/Lon_Control/: CMakeLists.txt  main.cpp  package.xml
G-Plore/src/Lon_Control/src/: Lon_Control.cpp  Lon_Control.h
G-Plore/src/Radar/: CMakeLists.txt  main.cpp  package.xml
G-Plore/src/Radar/RadarReferenceFile/: radarInterface.xlsx  固定尺寸输出new.ods
G-Plore/src/Radar/include/Radar/: radar.h
G-Plore/src/Radar/ros_vehicle_interface/creator/: Makefile  ros_vehicle_interface.pro  ros_vehicle_interface.pro.user.b64a120.4.8-pre1  ros_vehicle_interface.pro.user.fa35786
G-Plore/src/Radar/src/: App.cpp  App.h  Node.cpp  Node.h  UDPSocket.cpp  UDPSocket.h  ars408_60.cpp  ars408_60.h  ars408_62.cpp  ars408_62.h  ars408_63.cpp  ars408_63.h  ars408_64.cpp  ars408_64.h  ars408_65.cpp  ars408_65.h  ars408_66.cpp  ars408_66.h  ars408_67.back  ars408_67.cpp  ars408_67.h  ars408_67h.back
G-Plore/src/message/InsMsg/: CMakeLists.txt  package.xml
G-Plore/src/message/InsMsg/msg/: ins_p2.msg
G-Plore/src/message/PlanningMsg/: CMakeLists.txt  package.xml
G-Plore/src/message/PlanningMsg/msg/: lane_point.msg  path_data.msg
G-Plore/src/message/VehicleMsg/: CMakeLists.txt  package.xml
G-Plore/src/message/VehicleMsg/msg/: adm_cmd.msg  adm_lat.msg  cdm_cmd.msg  vehcile_cmd.msg  vehicle_download.msg  vehicle_status.msg  vehicle_upload.msg
G-Plore/src/message/vehicle_logging/: CMakeLists.txt  package.xml
G-Plore/src/message/vehicle_logging/msg/: logging_msg.msg
G-Plore/src/perception/automatic_calibration/calibration_tools/: CMakeLists.txt
G-Plore/src/perception/automatic_calibration/calibration_tools/src/: closest_point_matching.cpp
G-Plore/src/perception/perception_lidar/obstacle_tracking/: CMakeLists.txt
G-Plore/src/perception/perception_lidar/obstacle_tracking/src/: hungarian_assignment.cpp  obstacle_tracking.cpp
G-Plore/src/perception/perception_lidar/point_cloud_tools/: CMakeLists.txt
G-Plore/src/perception/perception_lidar/point_cloud_tools/src/: point_cloud_transformation.cpp  test1.cpp
G-Plore/src/perception/perception_radar/ars408/: CMakeLists.txt
G-Plore/src/perception/perception_radar/ars408/src/: ars408_60.cpp  ars408_62.cpp  ars408_63.cpp  ars408_64.cpp  ars408_65.cpp  ars408_66.cpp  ars408_67.cpp
G-Plore/src/perception/perception_radar/radar_tools/: CMakeLists.txt
G-Plore/src/perception/perception_radar/radar_tools/src/: anyarg.cpp  radar_tools.cpp
G-Plore/src/perception/radar_external_parameter_adjustment/point_cloud_tools/: CMakeLists.txt
G-Plore/src/perception/radar_external_parameter_adjustment/point_cloud_tools/src/: eigen_transformation.cpp  show_bounding_box.cpp
G-Plore/src/perception/sensor_fusion/: CMakeLists.txt  package.xml
G-Plore/src/perception/sensor_fusion/config/: async_fusion_config.pb.txt  calibration.yaml  cnn_segmentation_config.pb.txt
G-Plore/src/perception/sensor_fusion/include/common/: camera.h  config_gflags.h  convex_hullxy.h  lidar.h  object.h  object_supplement.h  perception_gflags.h  radar.h  types.h
G-Plore/src/perception/sensor_fusion/include/config_manager/: calibration_config_manager.h
G-Plore/src/perception/sensor_fusion/include/data_manager/: data_manager.h
G-Plore/src/perception/sensor_fusion/include/perception_yx/: obstacle_fusion.h  perception_yx.h
G-Plore/src/perception/sensor_fusion/include/proto/: can_card_parameter.pb.cc  can_card_parameter.pb.h  can_card_parameter.proto  error_code.pb.cc  error_code.pb.h  error_code.proto  geometry.pb.cc  geometry.pb.h  geometry.proto  header.pb.cc  header.pb.h  header.proto  perception_obstacle.pb.cc  perception_obstacle.pb.h  perception_obstacle.proto  sensor_canbus_conf.pb.cc  sensor_canbus_conf.pb.h  sensor_canbus_conf.proto
G-Plore/src/perception/sensor_fusion/include/util/: aabox2d.h  box2d.h  disjoint_set.h  extended_kalman_filter.h  file.h  graph_util.h  hungarian_bigraph_matcher.h  kalman_filter.h  line_segment2d.h  log.h  math_utils.h  matrix_operations.h  mutex.h  polygon2d.h  pose_util.h  singleton.h  string_util.h  time.h  time_util.h  timer.h  util.h  vec2d.h
G-Plore/src/perception/sensor_fusion/launch/: perception_2020_03_25.launch  perception_realtime.launch  perception_yx_detect.launch
G-Plore/src/perception/sensor_fusion/script/: run.sh
G-Plore/src/perception/sensor_fusion/src/: CMakeLists.txt  obstacle_fusion.cc  perception_yx.cpp  perception_yx_node.cpp
G-Plore/src/perception/sensor_fusion/src/common/: config_gflags.cc  object.cc  object_supplement.cc  perception_gflags.cc  types.cc
G-Plore/src/perception/sensor_fusion/src/config_manager/: calibration_config_manager.cc
G-Plore/src/perception/sensor_fusion/src/data_manager/: data_manager.cpp
G-Plore/src/perception/sensor_fusion/src/fusion/: CMakeLists.txt
G-Plore/src/perception/sensor_fusion/src/util/: aabox2d.cc  box2d.cc  file.cc  graph_util.cc  hungarian_bigraph_matcher.cc  line_segment2d.cc  math_utils.cc  matrix_operations.cc  polygon2d.cc  pose_util.cc  string_util.cc  timer.cc  util.cc  vec2d.cc
G-Plore/src/perception/sensor_fusion/visualization/: RT_RVIZ.rviz  demo.rviz  rviz.rviz  test.rviz
G-Plore/src/perception/show_calibration/point_cloud_tools/: CMakeLists.txt
G-Plore/src/perception/video_publisher/: CMakeLists.txt  package.xml
G-Plore/src/perception/video_publisher/launch/: video.launch
G-Plore/src/perception/video_publisher/src/: video_publisher.cpp
G-Plore/src/stanley_control/: CMakeLists.txt  main.cpp  package.xml
G-Plore/src/stanley_control/src/: stanley_control.cpp  stanley_control.h
(+188 files in other folders)
